project/logs/20250709_143543.log
Hello,DirectX!

clientSize:1280,720

Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader,path:Object3d.VS.hlsl,prefile:vs_6_0

Object3d.VS.hlsl:21:41: error: no member named 'normal' in 'VertexShaderInput'
    output.normal = normalize(mul(input.normal, (float32_t3x3) gTransformationMatrix.World));
                                  ~~~~~ ^

